--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <article>
             <section class="video">
-                    <video autoplay controls loop poster="assets/images/chaves_poster.webp">
+                <video muted autoplay controls loop poster="assets/images/chaves_poster.webp" id="video">
                     <source src="assets/videos/chaves.mp4" type="video/mp4">
                     Não foi possível carregar o vídeo :/
                 </video>
